--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/user-event": "^14.5.2",
     "lucide-react": "^0.447.0",
     "msw": "^2.4.9",
     "react": "^18.3.1",
@@ -26,6 +26,14 @@
       "react-app/jest"
     ]
   },
+ "jest": {
+  "collectCoverageFrom": [
+    "src/**/*.{js,jsx}",
+    "!src/index.js", 
+    "!src/serviceWorker.js",
+    "!src/reportWebVitals.js"
+  ]
+},
   "browserslist": {
     "production": [
       ">0.2%",
